# AirlineTycoon

./: CMakeLists.txt  README.md
.github/workflows/: workflow.yml
libs/: CMakeLists.txt
patch/: std_ger.patched.res.txt
src/: AT.vcxproj  AT.vcxproj.filters  AirportView.cpp  ArabAir.cpp  AtNet.cpp  Aufsicht.cpp  Auftrag.cpp  Block.cpp  Bot.cpp  Bot.h  BotActions.cpp  BotConditions.cpp  BotFunctions.cpp  BotHelper.cpp  BotHelper.h  CMakeLists.txt  City.cpp  Dialog.cpp  DutyFree.cpp  Editor.cpp  Editor.h  Fracht.cpp  GameFrame.cpp  GameMechanic.cpp  GameMechanic.h  Global.cpp  Init.cpp  Laptop.cpp  Lastmin.cpp  Makler.cpp  Misc.cpp  NewGamePopup.cpp  NewGamePopup.h  Options.cpp  PNet.cpp  Person.cpp  Personal.cpp  Planer.cpp  Planer.h  Planetyp.cpp  (+19 more)
src/Res/: resource.h
src/SBLib/: SBLib.vcxproj
src/SBLib/include/: BaseNetworkType.hpp  network.h
src/SBLib/source/: Network.cpp
src/SBLib/source/NetworkTypes/: ENetNetwork.cpp  RAKNetNetwork.cpp
src/SSE/: SSE.vcxproj
src/TeakLibW/: TeakFile.cpp  TeakLibW.vcxproj  TextRes.cpp
