add_subdirectory (enet EXCLUDE_FROM_ALL)
target_include_directories(enet PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/enet/include)
add_subdirectory (libsmacker EXCLUDE_FROM_ALL)
add_subdirectory (raknet EXCLUDE_FROM_ALL)
option(JANSSON_INSTALL "Generate installation target" OFF)
add_subdirectory (jansson/repo EXCLUDE_FROM_ALL)
add_subdirectory (libflic/repo EXCLUDE_FROM_ALL)
